--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>snow</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="stylesheet_portpholio.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
